lib/src/complete/snapshots/usage__complete__nu__tests__complete_nu-3.snap
---
source: lib/src/complete/nu.rs
expression: "complete_nu(&CompleteOptions\n{\n    usage_bin: \"usage\".to_string(), shell: \"nu\".to_string(), bin:\n    \"mycli\".to_string(), cache_key: None, spec:\n    Some(SPEC_KITCHEN_SINK.clone()), usage_cmd: None, source_file: None,\n})"
---
# @generated by usage-cli from usage spec
module _mycli_completions {
    const _usage_spec_mycli = r##'name mycli
bin mycli
source_code_link_template "https://github.com/jdx/mise/blob/main/src/cli/{{path}}.rs"
flag --flag1 help="flag1 description"
flag --flag2 help="flag2 description" {
    long_help #"""
flag2 long description

includes a code block:

    $ echo hello world
    hello world

    more code

Examples:

    # run with no arguments to use the interactive selector
    $ mise use

    # set the current version of node to 20.x in mise.toml of current directory
    # will write the fuzzy version (e.g.: 20)

some docs

    $ echo hello world
    hello world
"""#
}
flag --flag3 help="flag3 description" negate=--no-flag3
flag --with-default default="default value"
flag --shell {
    arg <shell> {
        choices bash zsh fish
    }
}
arg <arg1> help="arg1 description"
arg "[arg2]" help="arg2 description" required=#false default="default value" {
    choices choice1 choice2 choice3
}
arg <arg3> help="arg3 description" help_long="arg3 long description"
arg <argrest>… var=#true
arg "[with-default]" required=#false default="default value"
complete plugin run=#"""
echo "plugin-1
plugin-2
plugin-3"
"""#
cmd plugin {
    cmd install {
        long_help "install a plugin"
        flag "-g --global" global=#true
        flag "-d --dir" {
            arg <dir>
        }
        flag "-f --force" negate=--no-force
        arg <plugin>
        arg <version>
    }
}
'##
    def mycli_completer [spans: list<string>] {
        let spec_dir = ($env.XDG_CACHE_HOME? | default ($nu.home-dir? | default $nu.home-path? | path join ".cache") | path join "usage")
        if not ($spec_dir | path exists) {
            mkdir $spec_dir
            if $nu.os-info.family != "windows" { ^chmod 0700 $spec_dir }
        }
        let spec_file = ($spec_dir | path join $"usage__usage_spec_mycli.spec")
        $_usage_spec_mycli | save -f $spec_file

        # `complete` captures stderr and the exit code: a line that doesn't
        # parse makes complete-word fail, and its error would be printed over
        # the prompt.
        (^usage complete-word -f $spec_file --shell nu -- ...$spans | complete).stdout
        | lines
        | each {|it| $it | split column "\t" | rename value description | into record }
    }

    @complete mycli_completer
    export extern mycli []
}


# if "usage" is not installed show an error
if (which usage | is-empty) {
    return (error make {
        msg: "Error: usage CLI not found. This is required for completions to work in mycli.",
        help: "See https://usage.jdx.dev for more information."
    })
}
use _mycli_completions *
