lib/src/complete/snapshots/usage__complete__nu__tests__complete_nu.snap
---
source: lib/src/complete/nu.rs
expression: "complete_nu(&CompleteOptions\n{\n    usage_bin: \"usage\".to_string(), shell: \"nu\".to_string(), bin:\n    \"mycli\".to_string(), cache_key: None, spec: None, usage_cmd:\n    Some(\"mycli complete --usage\".to_string()), source_file: None,\n})"
---
# @generated by usage-cli from usage spec
module _mycli_completions {
    def mycli_completer [spans: list<string>] {
        let spec_dir = ($env.XDG_CACHE_HOME? | default ($nu.home-dir? | default $nu.home-path? | path join ".cache") | path join "usage")
        if not ($spec_dir | path exists) {
            mkdir $spec_dir
            if $nu.os-info.family != "windows" { ^chmod 0700 $spec_dir }
        }
        let spec_file = ($spec_dir | path join $"usage__usage_spec_mycli.spec")
        ^mycli complete --usage | collect | save -f $spec_file

        # `complete` captures stderr and the exit code: a line that doesn't
        # parse makes complete-word fail, and its error would be printed over
        # the prompt.
        (^usage complete-word -f $spec_file --shell nu -- ...$spans | complete).stdout
        | lines
        | each {|it| $it | split column "\t" | rename value description | into record }
    }

    @complete mycli_completer
    export extern mycli []
}


# if "usage" is not installed show an error
if (which usage | is-empty) {
    return (error make {
        msg: "Error: usage CLI not found. This is required for completions to work in mycli.",
        help: "See https://usage.jdx.dev for more information."
    })
}
use _mycli_completions *
